tests/ui/tuple_struct.stderr
error: #[pack] requires a struct with named fields
 --> tests/ui/tuple_struct.rs:4:1
  |
4 | struct Bad(u8);
  | ^^^^^^
